--- a/Dockerfile.publisher
+++ b/Dockerfile.publisher
@@ -1,13 +1,13 @@
 FROM openmandriva/cooker
 ENV ARCH x86_64
-ENV RUBY=ruby-2.2.3
+ENV RUBY ruby-2.2.3
 
 RUN urpmi --auto --auto-update --no-verify-rpm \
- && urpmi.addmedia contrib http://abf-downloads.rosalinux.ru/cooker/repository/$ARCH/contrib/release/ \
+ && urpmi.addmedia contrib http://abf-downloads.openmandriva.org/cooker/repository/$ARCH/contrib/release/ \
  && rm -f /etc/localtime \
  && ln -s /usr/share/zoneinfo/UTC /etc/localtime \
  && gpg2 --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 \
- && urpmi --no-suggests --no-verify-rpm --auto mock-urpm git curl sudo gnutar yaml-devel gcc-c++ readline-devel openssl-devel libtool bison \
+ && urpmi --no-suggests --no-verify-rpm --auto mock-urpm genhdlist2 rpm xz curl sudo gnutar \
  && sed -i -e "s/Defaults    requiretty.*/ #Defaults    requiretty/g" /etc/sudoers \
  && /bin/bash -l -c "curl -L get.rvm.io | bash -s stable" \
  && export PATH=$PATH:/usr/local/rvm/bin/ \
